--- a/_sass/slab-animate.scss
+++ b/_sass/slab-animate.scss
@@ -23,8 +23,13 @@
     justify-content: center;
     
     .flash-dots-container{
-      max-width: 1280px;
-      width:1280px;
+     
+      width:100%;
+
+      @media screen and (max-width: 1440px) {
+        max-width: 1280px;
+      }
+      
       height:inherit;
       margin: 0 auto;      
 
@@ -39,8 +44,12 @@
 
        @media screen and (max-width: 640px) {
          /* Mobile */
-          background: url("../assets/img/slab-animate/background_circuit_2x_mobile.png");       
-        }
+          background: url("../assets/img/slab-animate/background_circuit_2x_mobile.png");   
+          background-repeat: no-repeat;
+          background-position: center center ;
+          background-size: 435px 200px;   
+        }      
+
       }
 
      opacity:0;
@@ -55,6 +64,8 @@
       z-index:2;
           //top: -450px;
       top:1px;
+      padding-left:40px;
+      padding-right:20px;
       
      .animated-items {
         position: relative;
@@ -62,6 +73,8 @@
         @media screen and (max-width: 979px) {
           /* Tablet */
           height: 450px;
+          padding-left:0px;
+          padding-right:0px;
         }
         @media screen and (max-width: 640px) {
           /* Mobile */
@@ -227,10 +240,21 @@ to {top:0px; opacity: 1}
     position:relative;
     text-align: center;
     z-index:25;
-    margin-bottom: 65px;
+    margin-bottom :2.25rem;    
+
+    @media screen and (min-width: 768px) {
+      margin-bottom : 4.0625rem;
+    }
      
       //opacity:0;
       .slab-header{
+        padding-left : 2.75rem;
+        padding-right :2.75rem;
+   
+          @media screen and (min-width: 768px) {
+            padding-left :2.9375rem;
+          }     
+
         h1{
           text-align:left;
 
